--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
