--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
-.settings
+.settings/
 target/
+.gitattributes
+.project
+.classpath
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
